<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bitcoin D.A.V.E.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="splashTitle">Cash2BTC’s Bitcoin D.A.V.E.</string>
    <string name="dsplashTitle">Cash2BTC’s Dogecoin D.A.V.E.</string>
    <string name="start_button">START</string>
    <string name="start_bitcoin_button">Bitcoin</string>
    <string name="start_doge_button">Doge</string>
    <string name="start_maza_button">Mazacoin</string>
    <string name="start_demo_button"><i>Demo</i></string>
    <string name="splashUrl">www.cash2btc.com</string>
    <string name="splashVersion">"Version: "</string>
    <string name="welcome_instructions">Touch to Begin!</string>
    <string name="dwelcome_instructions">Press START to buy Dogecoin.</string>
    <string name="buttonScanQR">Scan QR</string>
    <string name="image_description">Icon</string>
    <string name="transaction_complete">Transaction complete.\n  Thank you!</string>
    <string name="printer_off_line">Printer Offline.</string>
    <string name="sessions_line1">Since </string>
    <string name="sessions_line2">Bitcoins were sold in </string>
    <string name="sessions_line3"> transactions.</string>
    <string name="buy_bitcoin">Press to buy BITCOIN!</string>
    <string name="buy_dogecoin">To The Moon!</string>
    <string name="buy_mazacoin">Hoka hey! \nLets do this!</string>
    <string name="buy_bitcoin_demo">Press to DEMO Bitcoin!</string>
    <string name="buy_dogecoin_demo">To The Moon \nDEMO</string>
    <string name="buy_mazacoin_demo">Hoka hey \nLets do this \nDEMO</string>
    <string name="menu_log">Log</string>
    <string name="menu_sessions">Sessions</string>
    <string name="cancel">Cancel</string>
    <string name="pref_owner_password">Password</string>
    <string name="pref_owner_password_key">OwnerPassword</string>
    <string name="pref_owner_password_summ">Redemption Password</string>
    <string name="pref_redemption_password">Password</string>
    <string name="pref_redemption_password_key">password</string>
    <string name="pref_redemption_password_summ">Redemption Password</string>
    <string name="pref_provider">Provider</string>
    <string name="pref_redemption_provider_key">redemption_provider</string>
    <string name="pref_redemption_provider_summ">Redemption Provider</string>
    <string name="pref_redemption_current">Current Redemption Provider</string>
    <string name="pref_redemption_current_key">current_provider</string>
    <string name="pref_redemption_current_summ">Current Redemption Provider</string>
    <string name="pref_owner_bc_password_key">bc account pwd1</string>
    <string name="pref_owner_bc_password2_key">bc account pwd2</string>
    <string name="pref_owner_bc_account_id_key">bc account id</string>
    <string name="pref_owner_max_transaction_key">bc account max trans</string>
    <string name="pref_owner_transaction_fee_key">bc account trans fee</string>
    <string name="pref_lastUpdateTime">dave last update time</string>
    <string name="title_activity_provider_settings">Provider Settings</string>
    <string name="ServiceProvider_name">Redemption Provider Settings</string>
    <string name="provider_instructions">Configure your Redemption Service Providers.</string>
    <string name="provider_url_label">New Provider Address</string>
    <string name="provider_url_hint">Enter the web address of the redemption service provider.</string>
    <string name="provider_password_label">Password</string>
    <string name="provider_password_hint">Enter the redemption service password.</string>
    <string name="provider_done">Done</string>
    <string name="provider_delete">Delete</string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="phone_number_hint">(xxx)-xxx-xxxx</string>
    <string name="next_button">Next</string>
    <string name="title_activity_address">Go Back</string>
    <string name="title_activity_selection">Go Back</string>
    <string name="phone_instructions">Welcome, Please Scan in your address</string>
    <string name="dphone_instructions">wow, begin very riches...    for moon we need your Dogecoin address.    \n Please Scan in your address by pressing the Scan QR button.                     such thanks</string>
    <string name="wphone_instructions">Thank you for choosing Mazacoin Legal tender for the sovereign Lakota Nation. to begin we need your Mazacoin address. Please Scan in your address by pressing the Scan QR button. </string>
    <string name="address_hint"></string>
    <string name="sessionProvider_name"> Session Provider</string>
    <string name="qr_scan">SCAN ME</string>
    <string name="redemption_label">REDEMPTION CODE</string>
    <string name="redemption_instructions">To complete transaction: \n\t1. Scan this REDEMPTION CODE\n\t2. Send text message to (646) 350-0558 \n\t3. Paste (or type) redemption code.</string>
    <string name="title_activity_buy_qr_">Redemption</string>
    <string name="bc_redemption_instructions">Wait for the hash.</string>
    <string name="bc_redemption_instructions2">Print the results or scan the QR code.</string>
    <string name="redemption_hash_lable">Hash</string>
    <string name="redemption_msg_lable">Message</string>
    <string name="redemption_notice_lable">Notice</string>
    <string name="print_button">Print</string>
    <string name="result_button">Results</string>
    <string name="redemption_progress">Sending order to provider.</string>
    <string name="select_info">Would you like to buy bitcoin? or would you like to sell</string>
	<string name="Selection_label">Selection</string>
    <string name="plan_b">Cash2BTC’s Bitcoin D.A.V.E.</string>
    <string name="plan_d">Cash2BTC’s Dogecoin D.A.V.E.</string>
    <string name="plan_w">Cash2BTC’s Mazacoin D.A.V.E.</string>
    <string name="address_label">Address:</string>
    <string name="session_label">Session:</string>
    <string name="status_label">Status:</string>
    <string name="bitcoin_label">Bitcoins:</string>
    <string name="mazacoin_label">Mazacoins:</string>
    <string name="dogecoin_label">Dogecoins:</string>
    <string name="exchange_rate_label">Price:</string>
     <string name="exchange_fee_label">Fee:</string>
    <string name="tendered_lable">Tendered:</string>
    <string name="address_value">1xxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="tendered_value">0</string>
    <string name="status_value">READY</string>
    <string name="session_value">A123</string>
    <string name="total_value">0</string>
    <string name="buy_now"> Press to buy BITCOIN! </string>
    <string name="dbuy_now"> To The MOON! </string>
    <string name="wbuy_now"> Hoka Hey! </string>
    <string name="cancel_button">Cancel</string>
    <string name="change_address_menu">Change Address</string>
    <string name="buy_instructions">Insert Cash Now!</string>
    <string name="sell_instructions">To begin, Select how much bitcoin you would like to sell. (In USD)\n Must be multiple of 20!</string>
    <string name="title_activity_buy_screen">Buy Bitcoin</string>
    <string name="title_activity_sell_screen">Sell Bitcoin</string>
    <string name="maximum_funds_available_label">Maximum \nTransaction</string>
    <string name="title_activity_log_view">Session Log</string>
    <string name="owner_common_title">Common</string>
    <string name="owner_sessions_title">Sessions</string>
    <string name="owner_doge_title">DogeAPI</string>
    <string name="owner_doge_instructions">Set you DogeAPI account information. All we need is your ApiKey from your DogeAPI wallet settings.</string>
    <string name="owner_doge_account_hint">All we need is you ApiKey from your DogeAPI wallet settings.</string>
    <string name="owner_doge_account_label">DogeAPI api_key</string>
    <string name="test_doge_account">TEST SETTINGS</string>
    <string name="owner_doge_max_label">Maximum Transaction Allowed</string>
    <string name="owner_doge_max_hint">Largest transaction allowed</string>
    <string name="owner_doge_balance_label">DogeAPI Balance</string>
    <string name="owner_doge_balance_initial"><i>Press TEST to lookup balance</i></string>
    <string name="owner_currency_label"> Select Currency</string>
    <string name="owner_symbol_label"> Select Symbol from Android locales</string>
    <string name="owner_bills_label"> Set Bill Vaules</string>
    <string name="owner_bill1_label"> Bill 1</string>
    <string name="owner_bill2_label"> Bill 2</string>
    <string name="owner_bill3_label"> Bill 3</string>
    <string name="owner_bill4_label"> Bill 4</string>
    <string name="owner_bill5_label"> Bill 5</string>
    <string name="owner_bill6_label"> Bill 6</string>
    <string name="owner_bill7_label"> Bill 7</string>
    <string name="owner_bill1_hint">1</string>
    <string name="owner_bill2_hint">2</string>
    <string name="owner_bill3_hint">3</string>
    <string name="owner_bill4_hint">4</string>
    <string name="owner_bill5_hint">5</string>
    <string name="owner_bill6_hint">6</string>
    <string name="owner_bill7_hint">7</string>
    <string name="owner_password2_hint">The new password again.</string>
    <string name="owner_password2_label"> Password</string>
    <string name="owner_password1_hint">The new password.</string>
    <string name="owner_password1_label"> Password</string>
    <string name="owner_common_instructions">Set your D.A.V.E. account information.</string>
    <string name="owner_kiosk_label">Kiosk Controls.</string>
    <string name="owner_fees_label">Service Fee Collection.</string>
    <string name="owner_primary_checkbox">Set as primary bitcoin account.</string>
    <string name="owner_payout_button">Payout</string>
    <string name="owner_payout_instructions">Payout will save these sessions to a file and pay the DAVE supplier.</string>
    <string name="owner_bc_title">Blockchain</string>
    <string name="title_activity_initialize">D.A.V.E. Configuration</string>
    <string name="owner_instructions">Set your Blockchain account information.</string>
    <string name="owner_dave_password_hint">Password used to reach this screen.</string>
    <string name="owner_dave_password_label">D.A.V.E. Login Password</string>
    <string name="owner_bc_password2_hint">The optional second password. If set on Blockchain it will be required when you send funds from your account.</string>
    <string name="owner_bc_password2_label">Second Password</string>
    <string name="owner_bc_password1_hint">Primary password for your Blockchain account.</string>
    <string name="owner_bc_password1_label">Main Password</string>
    <string name="owner_bc_account_hint">The Identifier which is displayed when logging into your Blockchain account.</string>
    <string name="owner_bc_account_label">Blockchain Identifier</string>
    <string name="scan_bc_account">Scan</string>
    <string name="print_bc_account">Print</string>
    <string name="owner_bc_max_label">Maximum Transaction Allowed</string>
    <string name="owner_bc_max_hint">Largest transaction allowed</string>
    <string name="test_bc_account">TEST SETTINGS</string>
    <string name="owner_bc_balance_label">Blockchain Balance</string>
    <string name="owner_bc_balance_initial"><i>Press TEST to lookup</i></string>
    <string name="owner_transaction_fee_label">Transaction Fee: </string>
    <string name="owner_transaction_fee_hint">Percentage taken from every sale.</string>
    <string name="owner_ct_title">Cointrader.net</string>
    <string name="owner_ct_instructions">Scan your Coin Trader account information.</string>
    <string name="owner_ct_private_key">Private key.</string>
    <string name="done_button">DONE</string>
</resources>