<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyScreenActivity" >

    <TextView
        android:id="@+id/buy_instructions"
        style="@style/Instructions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:hint="@string/buy_instructions" >
    </TextView>

    <TextView
        android:id="@+id/PlanB_View"
        style="@style/Value_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buy_instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/plan_b" />

    <TextView
        android:id="@+id/StatusLabel"
        style="@style/Label_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/PlanB_View"
        android:layout_below="@id/PlanB_View"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/status_label" />

    <TextView
        android:id="@+id/StatusValue"
        style="@style/Value_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/StatusLabel"
        android:layout_marginLeft="80dp"
        android:layout_toRightOf="@id/StatusLabel"
        android:ems="10"
        android:hint="@string/status_value" />

    <TextView
        android:id="@+id/SessionLabel"
        style="@style/Label_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/StatusLabel"
        android:layout_below="@id/StatusLabel"
        android:layout_marginTop="10dp"
        android:text="@string/session_label" />

    <TextView
        android:id="@+id/SessionValue"
        style="@style/Value_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/SessionLabel"
        android:layout_alignLeft="@id/StatusValue"
        android:hint="@string/session_value" />

    <TextView
        android:id="@+id/AddressLabel"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/StatusLabel"
        android:layout_below="@id/SessionLabel"
        android:layout_marginTop="15dp"
        android:text="@string/address_label" />

    <TextView
        android:id="@+id/AddressValue"
        style="@style/Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/AddressLabel"
        android:layout_alignLeft="@id/StatusValue"
        android:hint="@string/address_hint" />

    <TextView
        android:id="@+id/maximum_funds_available_label"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/StatusLabel"
        android:layout_below="@id/SessionLabel"
        android:layout_marginTop="80dp"
        android:text="@string/maximum_funds_available_label" />

    <TextView
        android:id="@+id/maximum_funds_available_value"
        style="@style/Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/maximum_funds_available_label"
        android:layout_alignLeft="@id/StatusValue"
        android:text="0" />

    <TextView
        android:id="@+id/exchange_rate_label"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/StatusLabel"
        android:layout_below="@id/maximum_funds_available_label"
        android:layout_marginTop="10dp"
        android:text="@string/exchange_rate_label" />

    <TextView
        android:id="@+id/exchange_rate_value"
        style="@style/Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/exchange_rate_label"
        android:layout_alignLeft="@id/StatusValue"
        android:text="0" />

    <TextView
        android:id="@+id/bitcoin_label"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/StatusLabel"
        android:layout_below="@id/exchange_rate_label"
        android:layout_marginTop="20dp"
        android:text="@string/bitcoin_label" />

    <TextView
        android:id="@+id/bitcoin_value"
        style="@style/Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/bitcoin_label"
        android:layout_alignLeft="@id/StatusValue"
        android:text="0" />

    <!-- <TextView -->
    <!-- android:id="@+id/PhoneLabel" -->
    <!-- style="@style/Value_small" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignLeft="@id/StatusLabel" -->
    <!-- android:layout_below="@id/SessionLabel" -->
    <!-- android:layout_marginTop="80dp" -->
    <!-- android:text="@string/phone_number_label" /> -->


    <!-- <TextView -->
    <!-- android:id="@+id/PhoneValue" -->
    <!-- style="@style/Value_small" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignBaseline="@id/PhoneLabel" -->
    <!-- android:layout_alignLeft="@id/StatusValue" -->
    <!-- android:hint="@string/phone_number_hint" /> -->

    <TextView
        android:id="@+id/TenderedLabel"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/StatusLabel"
        android:layout_below="@id/bitcoin_label"
        android:layout_marginTop="20dp"
        android:text="@string/tendered_lable" />

    <TextView
        android:id="@+id/TenderedValue"
        style="@style/Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/TenderedLabel"
        android:layout_alignLeft="@id/StatusValue"
        android:hint="@string/tendered_value" />

    <Button
        android:id="@+id/BuyButton"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TenderedLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/buy_now" />

    <Button
        android:id="@+id/CancelButton"
        style="@style/BuyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BuyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/cancel_button" />

    <ImageView
        android:id="@+id/imgUsb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/image_description"
        android:src="@drawable/usb_icon" />

    <ImageView
        android:id="@+id/imgApex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgUsb"
        android:layout_toRightOf="@+id/imgUsb"
        android:contentDescription="@string/image_description"
        android:src="@drawable/apex_icon" />

    <ImageButton
        android:id="@+id/imgCash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgApex"
        android:layout_toRightOf="@+id/imgApex"
        android:contentDescription="@string/image_description"
        android:src="@drawable/dollar_icon" />

</RelativeLayout>