<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/PlanB_View"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/splashTitle"
        android:textColor="#999999"
        android:textSize="48sp" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/btc_logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal"
        android:text="@string/splashUrl"
        android:textColor="#454545"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/PlanB_View"
        android:gravity="center_horizontal"
        android:text="@string/splashVersion"
        android:textColor="#454545"
        android:textSize="24sp" />

</RelativeLayout>